<resources>
    <string name="nomeficheiro">DadosBR.txt</string>

    <string name="app_name">BoxReminder</string>
    <string name="registarMedicamento">Registar Medicamento</string>
    <string name="verRegistos">Ver Registos</string>
    <string name="sair">Sair</string>

    <string name="definicoes">Definições</string>
    <string name="def_cEmer">Contacto de Emergencia</string>
    <string name="def_AtivVoz">Ativar voz</string>
    <string name="voltar">Voltar</string>

    <string name="nomeMedicamento">Nome do Medicamento</string>
    <string name="proximo">Próximo</string>
    <string name="gravar">Gravar</string>
    <string name="reproduzir">Reproduzir</string>

    <string name="quantidade">Quantidade</string>

    <string-array name="QuantidadeMedidas">
        <item>Unidades</item>
        <item>mg/L</item>
    </string-array>

    <string name="data">Data</string>
    <string name="dataInicio">Data Inicial</string>
    <string name="dataFinal">Repetir Até</string>
    <string name="hora">Hora</string>

    <string-array name="Repetir">
        <item>Diáriamente</item>
        <item>Escolher Opções</item>
        <item>Semanalmente</item>
        <item>Mensalmente</item>
    </string-array>

    <string name="dataLimite">Data Limite</string>


    <string name="appwidget_text"> Chamada SOS </string>

    <string name="seguinte">Seguinte</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>

</resources>
