<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    tools:context="com.isec.boxreminder.Data"
    android:orientation="vertical">

    <TextView
        android:text="@string/data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#999999"
        android:textStyle="normal|bold"
        android:textSize="36sp" />

    <!-- Data Inicio -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataInicio"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:layout_weight="9"
                android:id="@+id/editTextDataInicio"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imagemDataInicio"
                android:layout_weight="1"
                android:src="@drawable/calendar"/>
        </LinearLayout>


    </LinearLayout>

    <!-- HORA & MINUTOS -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">


            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:minEms="2"
                android:id="@+id/horas"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:minEms="2"
                android:layout_height="match_parent"
                android:id="@+id/minutos"
                />
        </LinearLayout>

    </LinearLayout>


    <!-- SPINNER OPCOES -->
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/spinnerRepeticao"
        android:entries="@array/Repetir">
    </Spinner>


    <!-- Dias da semana -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/segunda"
            android:button="@null"
            android:gravity="center"
            android:text="S"
            android:background="@drawable/radioweekday"
            />

        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/terca"
            android:button="@null"
            android:gravity="center"
            android:text="T"
            android:background="@drawable/radioweekday"
        />
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/quarta"
            android:button="@null"
            android:gravity="center"
            android:text="Q"
            android:background="@drawable/radioweekday"
            />
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/quinta"
            android:button="@null"
            android:gravity="center"
            android:text="Q"
            android:background="@drawable/radioweekday"
            />
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/sexta"
            android:button="@null"
            android:gravity="center"
            android:text="S"
            android:background="@drawable/radioweekday"
            />
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/sabado"
            android:button="@null"
            android:gravity="center"
            android:text="S"
            android:background="@drawable/radioweekday"
            />
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/domingo"
            android:button="@null"
            android:gravity="center"
            android:text="D"
            android:background="@drawable/radioweekday"
            />
    </LinearLayout>

    <!-- DATA LIMITE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text= "@string/dataLimite"/>

        <Switch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/switchDataLimite"/>
    </LinearLayout>

    <!-- DATA FIM -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataFinal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:id="@+id/editTextDataFim"
                android:layout_weight="9"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/imagemDataFim"
                android:src="@drawable/calendar"/>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_corners_button"
        android:layout_weight="1"
        android:textColor="#999999"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:layout_margin="0dp"
        android:id="@+id/next"
        android:text="@string/proximo"/>

</LinearLayout>
